--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
   <![endif]-->
 </head>
 
-<body>
+<header>
+  <h1>Fun Bus</h1>
+  <nav>
+      <a class="navLinks" href="#">Home</a>        
+      <a class="navLinks" href="#">About Us</a>
+      <a class="navLinks" href="#">Blog</a>    
+      <a class="navLinks" href="#">Contact</a>    
+  </nav>
+</header>
 
-  
-     
+<body>
+   
   <div class="container home">
    
     <section class="content-section">
