--- a/index.html
+++ b/index.html
@@ -13,21 +13,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
-
-<header>
-  <h1>Fun Bus</h1>
-  <nav>
-      <a class="navLinks" href="#">Home</a>        
-      <a class="navLinks" href="#">About Us</a>
-      <a class="navLinks" href="#">Blog</a>    
-      <a class="navLinks" href="#">Contact</a>    
-  </nav>
-</header>
-
+    
 <body>
-   
+
+      <header class="main-nav">
+          <div class="container nav-container">
+              <h1 class="logo-heading">Fun Bus</h1>
+              <nav class="nav">
+                  <a class="nav-link" href="#">Home</a>
+                  <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="#">Blog</a>
+                  <a class="nav-link" href="#">Contact</a>
+                </nav>
+              </div>
+            </header>
+  
   <div class="container home">
-   
+      <header class="intro">
+          <img src="img/fun-bus.jpg" alt="toy bus">
+          <h2>Welcome To Fun Bus!</h2>
+          <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+        </header>
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
